--- a/website/src/pages/index.module.css
+++ b/website/src/pages/index.module.css
@@ -4,16 +4,31 @@
  */
 
 .heroBanner {
-  padding: 4rem 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  width: 100%;
+  height: calc(100vh - 60px);
   text-align: center;
   position: relative;
   overflow: hidden;
 }
 
-@media screen and (max-width: 996px) {
-  .heroBanner {
-    padding: 2rem;
-  }
+.heroTitle {
+  font-size: bold;
+}
+
+.heroBannerBackground {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  width: 400px;
+  height: 400px;
+  background-image: linear-gradient(-45deg, #bd34fe 50%, #47caff 50%);
+  border-radius: 99999px;
+  filter: blur(100px);
 }
 
 .buttons {
