--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -38,3 +38,7 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+.main-wrapper {
+  @apply flex flex-col;
+}
